# Finanzas-Personales-Py

./: README.md
finanzas_personales/: .env.example  .gitignore  LICENSE  README.md  install.sh  pyproject.toml  requirements.txt  run.bat  run.py  run.sh
finanzas_personales/assets/icons/: app_icon.icns
finanzas_personales/docs/: AUDITORIA.md  AUDITORIA_ACTUALIZADA.md  DIAGNOSTICO_VISUAL.md  DISENO_UX.md  EJECUCION_RAPIDA.md  GUIA_PRINCIPIANTES.md  INSTALACION.md  INSTALADOR.md  NUEVAS_FUNCIONALIDADES.md  PLAN_IMPLEMENTACION.md  RESUMEN_FINAL.md  SISTEMA_DE_LOGS.md  arquitectura.md  modelo_de_datos.md
finanzas_personales/src/: __init__.py  main.py
finanzas_personales/src/application/services/: analisis_service.py  movimiento_service.py  persona_service.py
finanzas_personales/src/domain/: categoria.py  movimiento.py  persona.py  resumen.py
finanzas_personales/src/infrastructure/alerts/: __init__.py  alert_system.py
finanzas_personales/src/infrastructure/camera/: __init__.py  camera_capture.py
finanzas_personales/src/infrastructure/config/: settings.py
finanzas_personales/src/infrastructure/db/: database.py  schema.sql  seeds.py  (+2 more)
finanzas_personales/src/shared/: app_manifest.manifest  app_manifest.py  decorators.py  design_tokens.py  logging_config.py  matplotlib_config.py  platform_config.py
finanzas_personales/tests/application/: test_analisis_service.py  test_movimiento_service.py  test_persona_service.py
finanzas_personales/tests/infrastructure/: __init__.py  test_movimiento_repository.py
finanzas_personales/tests/presentation/: test_main_presenter.py
finanzas_personales/tools/: diagnostico.py  generate_brand_assets.py  setup_installer.py
(+13 files in other folders)
